bela-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BelaContext"][::core::mem::size_of::<BelaContext>() - 392usize];
    ["Alignment of BelaContext"][::core::mem::align_of::<BelaContext>() - 8usize];
    ["Offset of field: BelaContext::audioIn"]
        [::core::mem::offset_of!(BelaContext, audioIn) - 0usize];
    ["Offset of field: BelaContext::audioOut"]
        [::core::mem::offset_of!(BelaContext, audioOut) - 8usize];
    ["Offset of field: BelaContext::analogIn"]
        [::core::mem::offset_of!(BelaContext, analogIn) - 16usize];
    ["Offset of field: BelaContext::analogOut"]
        [::core::mem::offset_of!(BelaContext, analogOut) - 24usize];
    ["Offset of field: BelaContext::digital"]
        [::core::mem::offset_of!(BelaContext, digital) - 32usize];
    ["Offset of field: BelaContext::audioFrames"]
        [::core::mem::offset_of!(BelaContext, audioFrames) - 40usize];
    ["Offset of field: BelaContext::audioInChannels"]
        [::core::mem::offset_of!(BelaContext, audioInChannels) - 44usize];
    ["Offset of field: BelaContext::audioOutChannels"]
        [::core::mem::offset_of!(BelaContext, audioOutChannels) - 48usize];
    ["Offset of field: BelaContext::audioSampleRate"]
        [::core::mem::offset_of!(BelaContext, audioSampleRate) - 52usize];
    ["Offset of field: BelaContext::analogFrames"]
        [::core::mem::offset_of!(BelaContext, analogFrames) - 56usize];
    ["Offset of field: BelaContext::analogInChannels"]
        [::core::mem::offset_of!(BelaContext, analogInChannels) - 60usize];
    ["Offset of field: BelaContext::analogOutChannels"]
        [::core::mem::offset_of!(BelaContext, analogOutChannels) - 64usize];
    ["Offset of field: BelaContext::analogSampleRate"]
        [::core::mem::offset_of!(BelaContext, analogSampleRate) - 68usize];
    ["Offset of field: BelaContext::digitalFrames"]
        [::core::mem::offset_of!(BelaContext, digitalFrames) - 72usize];
    ["Offset of field: BelaContext::digitalChannels"]
        [::core::mem::offset_of!(BelaContext, digitalChannels) - 76usize];
    ["Offset of field: BelaContext::digitalSampleRate"]
        [::core::mem::offset_of!(BelaContext, digitalSampleRate) - 80usize];
    ["Offset of field: BelaContext::audioFramesElapsed"]
        [::core::mem::offset_of!(BelaContext, audioFramesElapsed) - 88usize];
    ["Offset of field: BelaContext::multiplexerChannels"]
        [::core::mem::offset_of!(BelaContext, multiplexerChannels) - 96usize];
    ["Offset of field: BelaContext::multiplexerStartingChannel"]
        [::core::mem::offset_of!(BelaContext, multiplexerStartingChannel) - 100usize];
    ["Offset of field: BelaContext::multiplexerAnalogIn"]
        [::core::mem::offset_of!(BelaContext, multiplexerAnalogIn) - 104usize];
    ["Offset of field: BelaContext::audioExpanderEnabled"]
        [::core::mem::offset_of!(BelaContext, audioExpanderEnabled) - 112usize];
    ["Offset of field: BelaContext::flags"][::core::mem::offset_of!(BelaContext, flags) - 116usize];
    ["Offset of field: BelaContext::projectName"]
        [::core::mem::offset_of!(BelaContext, projectName) - 120usize];
    ["Offset of field: BelaContext::underrunCount"]
        [::core::mem::offset_of!(BelaContext, underrunCount) - 376usize];
    ["Offset of field: BelaContext::thisThread"]
        [::core::mem::offset_of!(BelaContext, thisThread) - 380usize];
    ["Offset of field: BelaContext::threadCount"]
        [::core::mem::offset_of!(BelaContext, threadCount) - 384usize];
};
impl Default for BelaContext {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct BelaChannelGain {
    #[doc = "< Channel number. Negative value means all the channels"]
    pub channel: ::core::ffi::c_int,
    #[doc = "< Gain in dB."]
    pub gain: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BelaChannelGain"][::core::mem::size_of::<BelaChannelGain>() - 8usize];
    ["Alignment of BelaChannelGain"][::core::mem::align_of::<BelaChannelGain>() - 4usize];
    ["Offset of field: BelaChannelGain::channel"]
        [::core::mem::offset_of!(BelaChannelGain, channel) - 0usize];
    ["Offset of field: BelaChannelGain::gain"]
        [::core::mem::offset_of!(BelaChannelGain, gain) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct BelaChannelGainArray {
    pub length: ::core::ffi::c_uint,
    pub data: *mut BelaChannelGain,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BelaChannelGainArray"][::core::mem::size_of::<BelaChannelGainArray>() - 16usize];
    ["Alignment of BelaChannelGainArray"][::core::mem::align_of::<BelaChannelGainArray>() - 8usize];
    ["Offset of field: BelaChannelGainArray::length"]
        [::core::mem::offset_of!(BelaChannelGainArray, length) - 0usize];
    ["Offset of field: BelaChannelGainArray::data"]
        [::core::mem::offset_of!(BelaChannelGainArray, data) - 8usize];
};
impl Default for BelaChannelGainArray {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " \\ingroup control\n \\brief Structure containing initialisation parameters for the real-time\n audio control system.\n\n This structure is initialised using Bela_defaultSettings(). Its contents\n are used up through the point of calling\n Bela_initAudio() at which point it is no longer needed."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct BelaInitSettings {
    #[doc = " \\brief Number of audio frames per period (\"blocksize\").\n\n The number of analog frames depends on relative sample rates of the\n two. By default, audio is twice the sample rate, so has twice the\n period size."]
    pub periodSize: ::core::ffi::c_int,
    #[doc = " Whether to use the analog input and output"]
    pub useAnalog: ::core::ffi::c_int,
    #[doc = " Whether to use the 16 programmable GPIOs"]
    pub useDigital: ::core::ffi::c_int,
    #[doc = " How many audio input channels [ignored]"]
    pub numAudioInChannels: ::core::ffi::c_int,
    #[doc = " How many audio out channels [ignored]"]
    pub numAudioOutChannels: ::core::ffi::c_int,
    #[doc = " How many analog input channels"]
    pub numAnalogInChannels: ::core::ffi::c_int,
    #[doc = " How many analog output channels"]
    pub numAnalogOutChannels: ::core::ffi::c_int,
    #[doc = " How many channels for the GPIOs"]
    pub numDigitalChannels: ::core::ffi::c_int,
    #[doc = " Whether to begin with the speakers muted"]
    pub beginMuted: ::core::ffi::c_int,
    #[doc = " Level for the audio DAC output. DEPRECATED: ues lineOutGains"]
    pub dacLevel: f32,
    #[doc = " Level for the audio ADC input. DEPRECATED: use audioInputGains"]
    pub adcLevel: f32,
    #[doc = " Gains for the PGA, left and right channels. DEPRECATED: use audioInputGains"]
    pub pgaGain: [f32; 2usize],
    #[doc = " Level for the headphone output. DEPRECATED: use headphoneGains"]
    pub headphoneLevel: f32,
    #[doc = " How many channels to use on the multiplexer capelet, if enabled"]
    pub numMuxChannels: ::core::ffi::c_int,
    #[doc = " Which audio expander settings to use on the input"]
    pub audioExpanderInputs: ::core::ffi::c_uint,
    #[doc = " Which audio expander settings to use on the input"]
    pub audioExpanderOutputs: ::core::ffi::c_uint,
    #[doc = " Which PRU (0 or 1) the code should run on"]
    pub pruNumber: ::core::ffi::c_int,
    #[doc = " The external .bin file to load. If empty will use PRU code from pru_rtaudio_bin.h"]
    pub pruFilename: [::core::ffi::c_char; 256usize],
    #[doc = " Whether to detect and log underruns"]
    pub detectUnderruns: ::core::ffi::c_int,
    #[doc = " Whether to use verbose logging"]
    pub verbose: ::core::ffi::c_int,
    #[doc = " Whether to use the blinking LED to indicate Bela is running"]
    pub enableLED: ::core::ffi::c_int,
    #[doc = " What GPIO pin to monitor for stopping the program. Defaults to 115\n (button on P9.27/P2.34/GPIO3[19]). Pass -1 to disable monitoring."]
    pub stopButtonPin: ::core::ffi::c_int,
    #[doc = " Whether to use high-performance mode: gives more CPU to\n the Bela task. The Linux part of the board and the IDE may\n freeze while the program is running. Use the button on the\n Bela cape to forcefully stop the running program"]
    pub highPerformanceMode: ::core::ffi::c_int,
    #[doc = " Whether audio/analog data should be interleaved"]
    pub interleave: ::core::ffi::c_int,
    #[doc = " \\brief Whether analog outputs should persist to future frames.\n\n n.b. digital pins always persist, audio never does"]
    pub analogOutputsPersist: ::core::ffi::c_int,
    #[doc = " \\brief Whether the analog channels should be resampled to\n audio sampling rate."]
    pub uniformSampleRate: ::core::ffi::c_int,
    #[doc = " \\brief The requested stack size for the audio thread. Defaults"]
    pub audioThreadStackSize: ::core::ffi::c_uint,
    #[doc = " \\brief The requested stack size for each AuxilaryTask. Defaults"]
    pub auxiliaryTaskStackSize: ::core::ffi::c_uint,
    #[doc = " Pointers to the user-defined functions"]
    pub setup: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut BelaContext, arg2: *mut ::core::ffi::c_void) -> bool,
    >,
    pub render: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut BelaContext, arg2: *mut ::core::ffi::c_void),
    >,
    pub cleanup: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut BelaContext, arg2: *mut ::core::ffi::c_void),
    >,
    #[doc = " Pin where amplifier mute can be found"]
    pub ampMutePin: ::core::ffi::c_int,
    #[doc = " Pointer to an optional function to be called when the audio thread is done.\n This function is called from the audio thread itself just before it returns."]
    pub audioThreadDone: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut BelaContext, arg2: *mut ::core::ffi::c_void),
    >,
    #[doc = " A codec-specific intialisation parameter"]
    pub codecMode: *mut ::core::ffi::c_char,
    #[doc = " audio input gains"]
    pub audioInputGains: BelaChannelGainArray,
    #[doc = " level for headphone outputs"]
    pub headphoneGains: BelaChannelGainArray,
    #[doc = " Level for the audio ADC input DEPRECATED: use audioInputGains"]
    pub adcGains: BelaChannelGainArray,
    #[doc = " Level for the audio line level output"]
    pub lineOutGains: BelaChannelGainArray,
    #[doc = " A bitmask of disabled digital channels"]
    pub disabledDigitalChannels: u32,
    #[doc = " Number of parallel render threads to run"]
    pub threadCount: ::core::ffi::c_uint,
    #[doc = " More pointers to the user-defined functions"]
    pub render_pre: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut BelaContext, arg2: *mut ::core::ffi::c_void),
    >,
    pub render_post: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut BelaContext, arg2: *mut ::core::ffi::c_void),
    >,
    #[doc = " The audio sample rate in Hz"]
    pub audioSampleRate: f32,
    #[doc = " User selected board to work with (as opposed to detected hardware)."]
    pub board: BelaHw,
    #[doc = " Name of running project."]
    pub projectName: *mut ::core::ffi::c_char,
}
